==> dannyf00/My-MCU-Libraries---2nd-try/MSP430FR/uart0isr_sw.c <==
#include "uart0isr_sw.h"				//we use software uart on TA0 CC channels
#define RBIT(ch)		((r4_lut[(ch) & 0x0f] << 4) | r4_lut[(ch) >> 4])	//consider the use of RBIT() for Cortex-M4 chips
#define TAxCTL				TA0CTL			//timera control
#define TAxR				TA0R			//timer / counter
#define TAxIV				TA0IV			//interrupt flag
#define TAxEX0				TA0EX0			//expansion register
#define TAxCCTL0			TA0CCTL0		//timer0 compare control
#define TAxCCTL1			TA0CCTL1		//timer1 cmpare control
#define TAxCCTL2			TA0CCTL2		//timer2 compare control
#define TAxCCTL3			TA0CCTL3		//timer0 compare control
#define TAxCCTL4			TA0CCTL4		//timer1 cmpare control
#define TAxCCTL5			TA0CCTL5		//timer2 compare control
#define TAxCCTL6			TA0CCTL6		//timer0 compare control
#define TAxCCR0				TA0CCR0			//timer0 compare register
#define TAxCCR1				TA0CCR1			//timer1 compare register
#define TAxCCR2				TA0CCR2			//timer2 compare register
#define TAxCCR3				TA0CCR3			//timer0 compare register
#define TAxCCR4				TA0CCR4			//timer1 compare register
#define TAxCCR5				TA0CCR5			//timer2 compare register
#define TAxCCR6				TA0CCR6			//timer0 compare register
#define TAx_PS8x			(3<<6)			//prescaler mask
#define TAx_EX8x			(7<<0)			//extensio prescaler/divider

void uart0_init(uint32_t bps) {
	//initialize the pins - output, idles high
	IO_SET(UART0_PORT, UART0_TX);
	IO_OUT(UART0_DDR, UART0_TX);
	
	//initialize the timer
	//clear the timer control register
	TAxCTL |= TACLR;							//TxCTL_bit.TACLR;						//set to reset timer a

	//stop timer
	//TxCTL &=~MC_0;							//TxCTL_bit.TAMC = 0x00;				//timer mode - 0x00: halted, 0x01: up mode, 0x02: continuous mode (to 0xffff), 0x03: up/down
	//TxCTL |= TASSEL_2;						//TxCTL_bit.TASSEL = 0x02;				//timer source - 0x00: TACLK, 0x01: ACLK, 0x02: SMCLK, 0x03: INCLK
	//TxCTL |= (ps & ID_3);						//TxCTL_bit.TAID = ps & 0x03;			//input divider - 0x00: /1, 0x01: /2, 0x02: /4, 0x03: /8
	TAxCTL &=~TAIFG;							//TxCTL_bit.TAIFG = 0;					//interrupt flag: 0= no interrupt pending; 1=interrupt pending
	TAxCTL &=~TAIE;							//TxCTL_bit.TAIE = 0;					//timer a interrupt enable: 0: interrupt disabled; 1: interrupt enabled;
	//TxCTL |= OUTMOD0;							//set output mode to zero

	//set up the output compare
	//set up TAxCCTLx register
	TAxCCTL0 = 	CM_0 |						//0=no capture
				CCIS_0 |					//0=input is CCIxA
				(0 << 11) |					//0=asynchronous, 1=synchronous
				(0 << 8) |					//0=compare, 1=capture
				OUTMOD_0 |					//0=OUTBIT
				(0 << 4) |					//1=compare / capture interrupt enabled, 0=disabled
				(0 << 2) |					//0=OUT is low, 1=OUT is high
				(0x00);
	//clear the flag
	TAxCCTL0 &=~CCIFG;						//0->clear the interrupt flag
	TAxCCTL0 &=~(1<<4);						//1->enable the compare / capture interrupt

	TAxCTL = 	TASSEL_2 |						//0=TACLK, 1=ACLK, 2=SMCLK, and 3=INCLK
				(0 & TAx_PS8x) |				//prescaler
				MC_2 |							//0=stop, 1=up to ccr0, 2=continous mode, 3=up and down
				0x00;							//TCIE disabled
#if defined(TA0EX0_)
	TAxEX0 = (0 & TAx_EX8x);	//set expansion divider
#endif
	
	//calculate the timing
	if (F_UART <= (bps << 16) * 1) {
		//running at 1:1 prescaler
		_U0TX_PR = F_UART / bps / 1 - 1;	//set the range
		TAxCTL = (TAxCTL &~TAx_PS8x) | ((0<<6) & TAx_PS8x);	//0->set the prescaler to 1:1
	} else if (F_UART <= (bps << 16) * 8) {
		//running at 8:1 prescaler
		_U0TX_PR = F_UART / bps / 8 - 1;	//set the range
		TAxCTL = (TAxCTL &~TAx_PS8x) | ((3<<6) & TAx_PS8x);	//1->set the prescaler to 8:1
	}
	//timer is running now
}

void uart0_puts(char *str) {
	char ch;
	while (uart0_busy()) continue;			//wait for the uart to be ready
	_U0TX_BUSY = 1;							//uart is busy
	//IO_SET(UART_PORT, UART_TX);			//TX high
	//reverse the input byte's order: LSB..MSB
	_U0TXphase = 1;							//to send the 1st byte
	//inverse the order of data byte
	_U0TX_ptr = str;						//save the string
	ch = *_U0TX_ptr++;						//save the char and advance the string pointer
	_U0TXDR = RBIT(ch);						//(r4_lut[ch & 0x0f] << 4) | r4_lut[ch >> 4];
	//_UxTXSR = (_UxTXDR << 7) | 0x7f;		//prepare for the next byte
	_U0TXmask = 1<<7;						//transmission mask
	TAxCCR0 = TAxR + _U0TX_PR;				//reset the timer/prescaler
	//clear the flag
	TAxCCTL0 &=~CCIFG;						//0->clear the interrupt flag
	TAxCCTL0 |= (1<<4);						//1->enable the compare / capture interrupt
	IO_CLR(UART0_PORT, UART0_TX);				//send the start bit -> low
}
